ns-deploy-lb.yml
---
# 네임스페이스 작성 (별도의 프로젝트 공간)
apiVersion: v1
kind: Namespace
metadata:
  name:  samsung

---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samsung-deploy
  namespace: samsung
  labels:
    app: web
    part: cloud
spec:
  replicas: 3
  selector:  # 어떤 라벨을 확인할 것인가?
    matchLabels:
      # 만약 n개면 n개 다 match 하는 곳에 
      app: web # deploy의 라벨이 아니라, pod의 라벨을 지정한다
  template: # 이 부분부터 Pod에 대한 정의를 한다
    metadata: # name을 별도로 지정할 필요는 없음. deploy이름-rs이름-pod이름
      labels:
        app: web  # selector.matchLabels.app: web와 template.metadata.labels.app: web이 일치해야 함
    spec:   # Pod 내에 들어갈 것들 (컨테이너)
      containers:
      - name: web
        image: nginx
        ports:
        - containerPort: 80

---
# Service(로드밸런서)
apiVersion: v1
kind: Service
metadata:
  name:  samsung-lb
  namespace: samsung
spec:
  type:  LoadBalancer
  selector:
    app: web # Pod의 app: web과 일치
  ports:
  - protocol: TCP
    port: 80 # LoadBalance의 port 
    targetPort: 80
    # nodePort: 랜덤이므로 저장할 필요 x
    # 여러 서비스가 노트포트를 공유하기 때문에 겹치지 않도록 랜덤 설저잉 오히려 좋음
