svc_deploy_blog.yml
---
# svc-shop > cluster-ip(default)
apiVersion: v1
kind: Service
metadata:
  name: svc-blog
spec:
  selector:
    app: blog
  ports:
  - port: 80
    targetPort: 80
---
# deploy-shop
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
spec:
  replicas: 3
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
      - name: blog
        image: ekdms3868/portal:blog
        resources:
          limits:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
