svc_deploy_nopage.yml
---
# svc-shop
kind: Service
apiVersion: v1
metadata:
  name: svc-nopage # rule의 svc-shop과 같아야 함
spec:
  selector:
    app: nopage # Pod에서 정의한 Pod의 label과 같아야 함
  # type: ClusterIP 기본이 ClusterIP라 안 적어도 됨
  ports:
  - port: 80
    targetPort: 80

---
# deploy-shop
apiVersion: apps/v1  
kind: Deployment
metadata:
  name: nopage
spec: # Pod에 대한 정의
  replicas: 3
  selector:
    matchLabels:
      app: nopage
  template:  
    metadata:  # Pod의 metadata 추가
      labels:
        app: nopage  # Pod의 라벨
    spec:
      containers:
      - name: nopage
        image: ekdms3868/portal:not
        resources: 
          limits:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
